# Bootcamp-DIO_Python-AI-Backend-Developer

./: README.md  pyproject.toml
00 - Desafios/: desafio_1.py  desafio_2.py  desafio_3.py  desafio_4.py  desafio_5.py  desafio_6.py  log.txt  sistema_bancario_v3.py  sistema_bancario_v4.py  sistema_bancario_v5.py  sistema_bancario_v6.py
01 - Fundamentos/Estruturas Condicionais e de Repetição/: estrutura_condicional_aninhada.py  estruturas_condicionais.py
01 - Fundamentos/Manipulando Strings/: string_3.py  string_4.py
01 - Fundamentos/Tipos de Operadores/: operadores_associacao.py  operadores_comparacao.py
02 - Estrutura de Dados/Funções/: argumentos_nomeados.py
03 - Programação Orientada a Objetos/00 - Classes e Objetos/: desafio_bicicletaria.py
03 - Programação Orientada a Objetos/01 - Construtores e Destrutores/: construtores_destrutores.py
04 - Decoradores, Iteradores e Geradores/: 06_decorador_retorna_func_decorada.py
05 - Data e Hora/: 00_datetime.py  01_timedelta.py  02_strftime_strptime.py  03_pytz.py  04_timezone.py
06 - Manipulação de Arquivos/: 00_operacao_leitura.py  01_operacao_escrita.py  02_os_shutil.py  03_tratamento_erro.py  05_csv.py  lorem.txt  teste.txt
Desafios/: sistema_bancario.py
Estruturas Condicionais e de Repetição/: estrutura_repeticao_break.py  estrutura_repeticao_for.py  identacao_blocos.py
Manipulando Strings/: string_1.py  string_2.py
Tipos de Operadores/: operadores_aritmeticos.py
Tipos de Operadores com Python/: operadores_atribuicao.py  operadores_logicos.py
(+3 files in other folders)
