[tool.poetry]
name = "bootcamp dio - python ai backend developer"
version = "0.1.0"
description = ""
authors = ["pblvvs <pblvvs16@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
